public/css/app.css
/*************** CSS for App inner pages *****************/

body {
    margin-top: 60px;
    font-family: 'Titillium Web', sans-serif;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

.row {
    margin-left: 0;
    margin-right: 0;
}


/******************
    Header Navbar
******************/

.navbar {
    background: rgb(30, 144, 255);
    border: none;
    -webkit-box-shadow: 0px 0px 20px 0px rgb(30, 144, 255);
    -moz-box-shadow: 0px 0px 20px 0px rgb(30, 144, 255);
    box-shadow: 0px 0px 20px 0px rgb(30, 144, 255);
}

.navbar-inverse .navbar-nav>li>a {
    color: white;
    text-transform: uppercase;
    transition: background 0.5s;
    letter-spacing: 1px;
}

.navbar-inverse .navbar-nav>li>a:hover {
    background: rgb(0, 114, 225);
}

.navbar-inverse .navbar-nav>li>a .fa {
    font-size: 18px;
    margin-right: 5px;
}

.navbar-form input, .navbar-form input:focus {
    background: transparent;
    box-shadow: none;
    border: none;
    border-bottom: 1px solid white;
    border-radius: 0;
    color: white;
}

.navbar-form button {
    background: transparent;
    box-shadow: none;
    border: none;
    border-bottom: 1px solid white;
    border-radius: 0;
    margin-top: 1px;
    color: rgb(200,200,200);
    transition: color 0.5s;
}

.navbar-form button:hover, .navbar-form button:focus, .navbar-form button:active{
    background: transparent !important;
    box-shadow: none;
    border: none;
    border-bottom: 1px solid white;
    border-radius: 0;
    margin-top: 1px;
    color: white;
}

.navbar-form input::-webkit-input-placeholder {
   color: rgb(200,200,200);
}

.navbar-form input:-moz-placeholder { /* Firefox 18- */
   color: rgb(200,200,200);
}

.navbar-form input::-moz-placeholder {  /* Firefox 19+ */
   color: rgb(200,200,200);
}

.navbar-form input:-ms-input-placeholder {
   color: rgb(200,200,200);
}

#notif-indicator {
    background-color: rgb(220, 100, 100);
    padding: 2px 5px 2px 5px;
    border-radius: 4px;
    display: none;
}




/************************
Flash message modal-body
************************/
#flash-message-modal {
    top:20%;
}

#flash-message-modal .modal-body {
    padding: 10px;
}

#flash-message-modal .modal-content {
    font-size: 16px;
}




/******************
    Footer
******************/
.footer {
    height: 80px;
    line-height: 80px;
    text-align: center;
    color: white;
    font-size: 16px;
    background: rgb(40, 40, 40);
    bottom: 0;
    margin-top: 50px;
    width: 100%;
}




/*******************
Page heading styling
*******************/
.page-heading {
    font-family: 'Lato';
    font-size: 80px;
    color: white;
    text-align: center;;
}




/*******************
Article sorting tab
*******************/
.sorting-tab-container {
    text-align: center;
}

.sorting-tab {
    background-color: rgb(30, 144, 255);
    color: white;
    width: 100px;
    display: inline-block;
    border-radius: 5px;
    margin-left: 5px;
    margin-right: 5px;
    padding: 5px;
}

a .sorting-tab {
    background-color: rgb(90, 90, 90);
    transition: all 0.5s;
}

a .sorting-tab:hover {
    background-color: rgb(0, 114, 225);
}




/******************
Article preview
******************/
.article-preview-container {
    float: none;
    margin: auto;
    margin-top: 50px;
    text-align: center;
    background-color: rgba(255,255,255,1);
    border-radius: 5px;
    padding: 10px;
    transition: all 0.5s;
}

.article-preview-container:hover {
    -webkit-box-shadow: 0px 0px 11px -2px rgba(255,255,255,1);
    -moz-box-shadow: 0px 0px 11px -2px rgba(255,255,255,1);
    box-shadow: 0px 0px 11px -2px rgba(255,255,255,1);
}

.article-preview-title {
    font-size: 24px;
    border-bottom: 1px solid rgba(80,80,80,0.2);
    padding-bottom: 5px;
}

.article-preview-title a:hover,  .article-preview-title a:active{
    text-decoration: none;
}

.article-preview-body {
    padding-top: 20px;
    padding-bottom: 20px;
    border-bottom: 1px solid rgba(80,80,80,0.2);
}

.article-preview-body p {
    font-size: 16px;
    font-weight: bold;
    font-family: 'Lato';
}

.article-preview-stats {
    padding-top: 12px;
    font-size: 15px;
}

.article-preview-stats a:hover, .article-preview-stats a:active {
    text-decoration: none;
}




/******************
    Search styling
******************/
.page-subheading {
    font-size: 18px;
    color: white;
    text-align: center;
}




/*********************
Notifications styling
*********************/

.notification-list-container {
    margin-top: 50px;
    overflow: hidden;
}

.notification-list-container > .row:first-child .notification-container {
    border-top-left-radius: 10px;
    border-top-right-radius: 10px;
}

.notification-list-container > .row:last-child .notification-container {
    border-bottom-left-radius: 10px;
    border-bottom-right-radius: 10px;
}

.notification-container {
    float: none;
    margin: auto;
    border: 1px solid rgba(80,80,80,0.2);
    background-color: rgba(255,255,255,1);
    padding: 10px;
    text-align: center;
    font-size: 16px;
    transition: all 0.3s;
}

.notification-container:hover {
    background-color: rgba(225,225,225,1);
}

.notification-unread {
    background-color: rgb(200, 235, 200);
}

.notification-unread:hover {
    background-color: rgb(180, 215, 180);
}

.notification-container a, .notification-container a:hover, .notification-container a:active {
    text-decoration: none;
    color: rgb(30,30,30);
}

.notification-stats {
    font-size: 14px;
    color: rgb(60,60,60);
}

.notification-stats .fa {
    font-size: 8px;
}

.notification-read-indicator {
    margin-right: 10px;
}

.notification-timestamp {
    margin-left: 10px;
}




/***********************
Create article styling
***********************/
.article-form {
    float: none;
    margin: auto;
    margin-top: 20px;
    font-family: 'Lato';
}

.article-form .title-section label, .article-form .body-section label {
    color: white;
    font-size: 24px;
    letter-spacing: 1px;
}

.article-form input, .article-form  textarea {
    font-size: 16px;
    font-family: 'Lato';
    color: rgb(220,220,220);
    background-color: rgba(0,0,0,0.5);
}

.article-form  textarea {
    resize: vertical;
}

.article-form-errors {
    float: none;
    margin: auto;
    margin-top: 20px;
    font-family: 'Lato';
    color: white;
    font-size: 14px;
    background-color: rgba(0,0,0,0.2);
    border: 1px solid #ccc;
    border-radius: 4px;
    padding: 10px;
}




/*************************
Show article page styling
*************************/
.article-container, .comments-container {
    float: none;
    margin: auto;
    margin-top: 50px;
    color: white;
}

.article-posted-by a {
    color: rgb(101,172,233);
}

.article-posted-by a:hover, .article-posted-by a:active {
    text-decoration: none;
}

.article-container hr {
    border: 1px solid rgb(50,50,50);
}

.article-title {
    text-align: center;
}

.article-body {
    margin-top: 50px;
    font-size: 16px;
    font-family: 'Lato';
    text-align: justify;
}

.article-stats {
    margin-top: 60px;
    letter-spacing: 1px;
}

.article-stats-right {
    text-align: right;
}

.vote-button {
    transition: all 0.5s;
    width:40%;
    margin-left: 10px;
}

.vote-button:focus {
    outline: none;
}

#upvote-button {
    -webkit-box-shadow: 0px 0px 10px 2px rgb(68, 157, 68);
    -moz-box-shadow: 0px 0px 10px 2px rgb(68, 157, 68);
    box-shadow: 0px 0px 10px 2px rgb(68, 157, 68);
}

#downvote-button {
    -webkit-box-shadow: 0px 0px 10px 2px rgb(201, 48, 44);
    -moz-box-shadow: 0px 0px 10px 2px rgb(201, 48, 44);
    box-shadow: 0px 0px 10px 2px rgb(201, 48, 44);
}

.vote-button-unselected {
    -webkit-box-shadow: none !important;
    -moz-box-shadow: none !important;
    box-shadow: none !important;
}

.rating-ajax-spinner {
    margin-right: 10px;
    font-size: 16px;
    display: none;
}

.comment hr {
    border: 1px dotted  rgb(50,50,50);
}

.comment-heading {
    font-size: 16px;
    letter-spacing: 1px;
}

.comment-heading a {
    color: rgb(101,172,233);
}

.comment-heading a:hover, .comment-heading a:active {
    text-decoration: none;
}

.comment-bottom {
    color: rgb(180,180,180);
    font-size: 12px;
}

.comment-bottom button {
    background: transparent;
    border: 1px solid rgb(180,180,180);
}

.comment-bottom button:hover {
    color: rgb(200,200,200);
}

.comment-input, .comment-button {
    margin-top: 10px;
}

.comment-input input {
    color: rgb(220,220,220);
    background-color: rgba(0,0,0,0.5);
}

#article-delete-modal {
    text-align: center;
    top:20%;
}

#article-delete-modal .modal-body {
    padding-top: 50px;
    padding-bottom: 50px;
}

#article-delete-modal .modal-content {
    font-size: 16px;
}




/********************
Users list styling
********************/
.user-list-container {
    margin-top: 50px;
    text-align: center;
}

.user-list-container a:hover, .user-list-container a:active {
    text-decoration: none;
}

.user-preview-col {
    float: none;
    margin: auto;
    display: inline-block;
}

.user-preview-container {
    background-color: rgba(255,255,255,0.9);
    margin: 20px;
    padding: 20px;
    padding-top: 5px;
    border-radius: 10px;
    font-size: 16px;
    transition: all 0.5s;
}

.user-preview-container:hover {
    background-color: rgba(225,225,225,0.9);
}

.user-preview-stats p {
    margin-top: 15px;
    color: rgb(30,30,30);
}

.user-preview-title {
    font-size: 20px;
    border-bottom: 1px solid rgb(180,180,180);
}




/********************
User profile styling
********************/
#user-delete-modal {
    text-align: center;
    top:20%;
}

#user-delete-modal .modal-body {
    padding-top: 50px;
    padding-bottom: 50px;
}

#user-delete-modal .modal-content {
    font-size: 16px;
}




/***********************
Auth pages styling
***********************/
.auth-form {
    float: none;
    margin: auto;
    margin-top: 50px;
    color: white;
}

.auth-form input, .auth-form  textarea {
    font-size: 16px;
    color: rgb(220,220,220);
    background-color: rgba(0,0,0,0.5);
}

.auth-form  textarea {
    resize: vertical;
}

.auth-form label {
    text-align: center;
    font-weight: normal;
    margin-top: 20px;
    margin-bottom: 20px;
}

.auth-form-errors {
    float: none;
    margin: auto;
    margin-top: 20px;
    font-family: 'Lato';
    color: white;
    font-size: 14px;
    background-color: rgba(0,0,0,0.2);
    border: 1px solid #ccc;
    border-radius: 4px;
    padding: 10px;
}

